--- a/eventListener.html
+++ b/eventListener.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Events - Event Listener</title>
-        <link rel="stylesheet" href="css/c06.css" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Events - Event Listener</title>
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="page">
             <h1>List King</h1>
             <h2>New Account</h2>
             <form method="post" action="http://www.example.org/register">
-                <label for="username">Create an username: </label>
-                <input type="text" id="username" />
+                <label for="username">Username: </label>
+                <input type="text" id="username" placeholder="Create an username"/>
                 <div id="feedback"></div>
-                <label for="password">Create a password: </label>
-                <input type="password" id="password" />
+                <label for="password">Password: </label>
+                <input type="password" id="password" placeholder="Create a password"/>
                 <input type="submit" value="sign up" />
 
             </form>
